bid chat and image alignment fixed

--- a/src/assets/styles/bids/createBids.scss
+++ b/src/assets/styles/bids/createBids.scss
@@ -218,6 +218,14 @@
 							  background: transparent;
 							}
 							.list-company{
+								.company-img {
+									img {
+										object-fit: contain;
+										max-width: 60px;
+										height: 60px;
+										aspect-ratio: 16/9;
+									}
+								}
 								&:nth-child(even){
 									background: #F4F5F7;
 								}
